<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintFullName"
        android:text=""
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hintEmail"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignLeft="@+id/editText4"
        android:layout_alignStart="@+id/editText4"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton"
        android:id="@+id/button"
        android:layout_marginTop="88dp"
        android:layout_below="@+id/editText5"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintConfirmPassword"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/editText5"
        android:layout_alignLeft="@+id/editText5"
        android:layout_alignStart="@+id/editText5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/alreadyAMemberButton"
        android:id="@+id/registerAlreadyAMember"
        android:layout_alignBottom="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp" />


</RelativeLayout>