<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/wizardBrushingTitle"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="90dp"
        android:layout_toStartOf="@+id/brushingNextbutton"
        android:layout_toLeftOf="@+id/brushingNextbutton" />


    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextButton"
        android:id="@+id/brushingNextbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#00ffffff"
        android:textColor="#ffffff"
        android:textSize="18sp"/>

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevButton"
        android:id="@+id/brushingPrevbutton"
        android:background="#00ffffff"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numberPicker2"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_toLeftOf="@+id/brushingNextbutton"
        android:layout_toStartOf="@+id/brushingNextbutton"
        android:textAlignment="textStart" />
</RelativeLayout>