<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#009688">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal|top"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:background="#ff0000"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Dental Care"
        android:id="@+id/textView2"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:ems="10"
        android:id="@+id/edtTxtPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_above="@+id/sign_in_button"
        android:layout_alignRight="@+id/sign_in_button"
        android:layout_alignEnd="@+id/sign_in_button" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:layout_above="@+id/loginNotAMember"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:backgroundTint="#ff0000"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/createAccount"
        android:id="@+id/loginNotAMember"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/loginbtn"
        android:layout_below="@+id/edtTxtPassword"
        android:layout_alignLeft="@+id/edtTxtPassword"
        android:layout_alignStart="@+id/edtTxtPassword"
        android:layout_alignRight="@+id/edtTxtPassword"
        android:layout_alignEnd="@+id/edtTxtPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtTxtEmail"
        android:hint="@string/hintEmail"
        android:layout_above="@+id/edtTxtPassword"
        android:layout_centerHorizontal="true" />

</RelativeLayout>